<resources>
    <string name="app_name">Fictie</string>

    <string name="menu_library">Library</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>

    <string name="hello_blank_fragment">Feature coming soon!</string>

    <string name="hint_any_field">Any Field</string>
    <string name="helper_any_field">Type \"id:xxxxxxx\" to open by ID</string>

    <string name="emoji_library_empty">😔</string>
    <string name="heading_library_empty">Seems empty here!</string>
    <string name="desc_library_empty">You should search for something and bookmark it!</string>

    <string name="setting_theme">Theme</string>
    <string name="desc_setting_theme">Change the application Theme</string>

    <string name="action_advanced_search">Advanced Search</string>
    <string name="notice_advanced_search">Advanced search coming soon</string>

    <string name="test_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque velit nec ex lacinia, sed cursus velit euismod. Sed nec vulputate erat. Nullam viverra lectus sem, id accumsan massa luctus nec. Sed semper imperdiet velit, semper pulvinar arcu. Vestibulum commodo dui vitae pulvinar convallis. Nullam fermentum tempus leo. Sed cursus elit quis volutpat pellentesque. Fusce eget massa vel massa lacinia ullamcorper ac sit amet mi. Vestibulum vitae quam sagittis, dapibus risus at, porta urna. Aenean porttitor commodo viverra. Donec sit amet auctor velit. Maecenas pulvinar sapien lacinia erat egestas aliquet. Etiam eu sapien et neque auctor aliquam a quis neque.</string>

    <string name="action_more">...</string>

    <string-array name="setting_reader_theme_options">
        <item>Follow application theme</item>
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string-array name="setting_reader_theme_options_values">
        <item>follow_application</item>
        <item>dark</item>
        <item>light</item>
    </string-array>

    <string-array name="setting_theme_options">
        <item>System default</item>
    </string-array>

    <string-array name="setting_theme_options_values">
        <item>system_default</item>
        <item>dark</item>
        <item>light</item>
    </string-array>
</resources>