<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LibraryFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/libraryRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/emptyNotice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emoji_library_empty"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heading_library_empty"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/desc_library_empty"
            android:textAlignment="center" />

    </LinearLayout>

</FrameLayout>