<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Search Bar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_any_field"
                    app:startIconDrawable="@drawable/baseline_book_black_24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/anyFieldEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/searchBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/d_padding_margin"
                    android:layout_weight="0.2"
                    android:background="@drawable/shape_rounded"
                    android:backgroundTint="?android:attr/colorPrimary"
                    android:src="@drawable/baseline_search_black_24dp"
                    android:tint="?android:attr/textColorPrimaryInverse" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/advancedSearchBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/d_padding_margin"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/action_advanced_search"
                android:textAlignment="center" />
        </RelativeLayout>

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/advancedOptionsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:el_duration="500"
            app:el_expanded="false"
            app:el_parallax="0.5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/notice_advanced_search" />

        </net.cachapa.expandablelayout.ExpandableLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchResultRv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</FrameLayout>